# maxwell2021

./: .gitignore  CMakeLists.txt  README.md
Qt-Advanced-Docking-System-3.7.1/: CMakeLists.txt  setup.py
Qt-Advanced-Docking-System-3.7.1/PyQtAds/: _version.py
Qt-Advanced-Docking-System-3.7.1/demo/: CMakeLists.txt  MainWindow.cpp  main.cpp
Qt-Advanced-Docking-System-3.7.1/examples/centralwidget/: CMakeLists.txt  main.cpp
Qt-Advanced-Docking-System-3.7.1/examples/deleteonclose/: CMakeLists.txt
Qt-Advanced-Docking-System-3.7.1/examples/emptydockarea/: CMakeLists.txt
Qt-Advanced-Docking-System-3.7.1/examples/sidebar/: CMakeLists.txt  MainWindow.cpp  main.cpp
Qt-Advanced-Docking-System-3.7.1/examples/simple/: CMakeLists.txt  MainWindow.cpp
Qt-Advanced-Docking-System-3.7.1/sip/: DockManager.sip
Qt-Advanced-Docking-System-3.7.1/src/: CMakeLists.txt  FloatingDockContainer.cpp
src/: CMakeLists.txt
